tests/valid/parsing_bug_main.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module parsing_bug_main.
:- interface.
:- import_module parsing_bug.

:- type blah == int.    % just to avoid warning about exporting nothing.
